--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,14 @@
 [tox]
-envlist = py26, py27, py33, py34
+envlist = py27, py34, pypy, flake8
 
 [testenv]
 setenv =
-    PYTHONPATH = {toxinidir}:{toxinidir}/schaakmat
+    PYTHONPATH = {toxinidir}:{toxinidir}/cgol
 commands = python setup.py test
 deps =
     -r{toxinidir}/requirements.txt
+
+[testenv:flake8]
+basepython = python3
+deps = flake8
+commands = flake8 schaakmat tests
