--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,18 @@
 
 language: python
 
-python:
-  - "3.4"
-  - "3.3"
-  - "2.7"
-  - "2.6"
-  - "pypy"
+env:
+  - TOX_ENV=py27
+  - TOX_ENV=py32
+  - TOX_ENV=py33
+  - TOX_ENV=py34
+  - TOX_ENV=pypy
+  - TOX_ENV=pypy3
+  - TOX_ENV=flake8
 
-# command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: pip install -r requirements.txt
+install:
+  - pip install -r requirements.txt
+  - pip install tox
 
 # command to run tests, e.g. python setup.py test
-script: python setup.py test
+script: tox -e TOX_ENV
