pypy3 requires later version of setuptools in tox.ini.

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,11 @@ commands = python setup.py test
 deps =
     -r{toxinidir}/requirements.txt
 
+[testenv:pypy3]
+deps =
+    setuptools >= 7.0
+    {[testenv]deps}
+
 [testenv:flake8]
 basepython = python3
 deps = flake8
