Reworked tox.ini pypy3 requirements

--- a/tox.ini
+++ b/tox.ini
@@ -6,12 +6,8 @@ setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/cgol
 commands = python setup.py test
 deps =
+    pypy3: setuptools >= 7.0
     -r{toxinidir}/requirements.txt
-
-[testenv:pypy3]
-deps =
-    setuptools >= 7.0
-    {[testenv]deps}
 
 [testenv:flake8]
 basepython = python3
