--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ envlist = py27, py32, py33, py34, pypy, pypy3, flake8
 
 [testenv]
 setenv =
-    PYTHONPATH = {toxinidir}:{toxinidir}/cgol
+    PYTHONPATH = {toxinidir}:{toxinidir}/schaakmat
 commands = python setup.py test
 deps =
     pypy3: setuptools >= 7.0
